// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List.Item /> should render with a link 1`] = `
<ListItem
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link="url/to/somewhere"
  onClick={null}
  rightComponent={null}
  title="My Title"
>
  <Glow
    className={null}
    color="#f7f7f7"
    styles={
      Object {
        "container": null,
        "glow": null,
      }
    }
  >
    <div
      aria-hidden={true}
      className="position-relative"
      onTouchTap={[Function]}
      style={null}
    >
      <div
        className="position-absolute left-0 top-0 w-100P h-100P b-transparent _1dnc6ae z-index-0"
        style={Object {}}
      />
      <Link
        className=""
        href="url/to/somewhere"
        onClick={null}
      >
        <div
          className="p-0 m-0 border-none text-align-left align-items-stretch w-100P "
          onClick={[Function]}
          role="link"
        >
          <Grid
            className="align-items-center min-height-56 p-8px_0 position-relative z-index-2"
            component="div"
            wrap={false}
          >
            <div
              className="align-items-center min-height-56 p-8px_0 position-relative z-index-2 d-flex min-width-100P"
            >
              <div
                className="align-self-flex-start flex-shrink-0 m-0_16px w-40"
              />
              <GridItem
                className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word"
                component="div"
                grow={1}
                shrink={1}
              >
                <div
                  className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word flex-grow-1"
                >
                  My Title
                </div>
              </GridItem>
            </div>
          </Grid>
        </div>
      </Link>
    </div>
  </Glow>
</ListItem>
`;

exports[`<List.Item /> should render with a right component 1`] = `
<ListItem
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link={null}
  onClick={null}
  rightComponent={
    <span>
      I\`m a span.
    </span>
  }
  title="My Title"
>
  <Grid
    className="align-items-center min-height-56 p-8px_0 position-relative z-index-2"
    component="div"
    wrap={false}
  >
    <div
      className="align-items-center min-height-56 p-8px_0 position-relative z-index-2 d-flex min-width-100P"
    >
      <div
        className="align-self-flex-start flex-shrink-0 m-0_16px w-40"
      />
      <GridItem
        className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word"
        component="div"
        grow={1}
        shrink={1}
      >
        <div
          className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word flex-grow-1"
        >
          My Title
        </div>
      </GridItem>
      <GridItem
        className=""
        component="div"
        grow={1}
        shrink={1}
      >
        <div
          className=" flex-grow-1"
        >
          <span>
            I\`m a span.
          </span>
        </div>
      </GridItem>
    </div>
  </Grid>
</ListItem>
`;

exports[`<List.Item /> should render with a title 1`] = `
<ListItem
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link={null}
  onClick={null}
  rightComponent={null}
  title="My Title"
>
  <Grid
    className="align-items-center min-height-56 p-8px_0 position-relative z-index-2"
    component="div"
    wrap={false}
  >
    <div
      className="align-items-center min-height-56 p-8px_0 position-relative z-index-2 d-flex min-width-100P"
    >
      <div
        className="align-self-flex-start flex-shrink-0 m-0_16px w-40"
      />
      <GridItem
        className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word"
        component="div"
        grow={1}
        shrink={1}
      >
        <div
          className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word flex-grow-1"
        >
          My Title
        </div>
      </GridItem>
    </div>
  </Grid>
</ListItem>
`;

exports[`<List.Item /> should render with an image 1`] = `
<ListItem
  className={null}
  image={
    <img
      alt="Alternative text"
      src="url/to/image"
    />
  }
  isDisabled={false}
  isSelected={false}
  link={null}
  onClick={null}
  rightComponent={null}
  title="My Title"
>
  <Grid
    className="align-items-center min-height-56 p-8px_0 position-relative z-index-2"
    component="div"
    wrap={false}
  >
    <div
      className="align-items-center min-height-56 p-8px_0 position-relative z-index-2 d-flex min-width-100P"
    >
      <div
        className="align-self-flex-start flex-shrink-0 m-0_16px w-40"
      >
        <img
          alt="Alternative text"
          src="url/to/image"
        />
      </div>
      <GridItem
        className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word"
        component="div"
        grow={1}
        shrink={1}
      >
        <div
          className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word flex-grow-1"
        >
          My Title
        </div>
      </GridItem>
    </div>
  </Grid>
</ListItem>
`;

exports[`<List.Item /> should render with an onClick element 1`] = `
<ListItem
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link={null}
  onClick={[Function]}
  rightComponent={null}
  title="My Title"
>
  <div
    aria-hidden={true}
    onClick={[Function]}
  >
    <Glow
      className={null}
      color="#f7f7f7"
      styles={
        Object {
          "container": null,
          "glow": null,
        }
      }
    >
      <div
        aria-hidden={true}
        className="position-relative"
        onTouchTap={[Function]}
        style={null}
      >
        <div
          className="position-absolute left-0 top-0 w-100P h-100P b-transparent _1dnc6ae z-index-0"
          style={Object {}}
        />
        <Grid
          className="align-items-center min-height-56 p-8px_0 position-relative z-index-2"
          component="div"
          wrap={false}
        >
          <div
            className="align-items-center min-height-56 p-8px_0 position-relative z-index-2 d-flex min-width-100P"
          >
            <div
              className="align-self-flex-start flex-shrink-0 m-0_16px w-40"
            />
            <GridItem
              className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word"
              component="div"
              grow={1}
              shrink={1}
            >
              <div
                className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word flex-grow-1"
              >
                My Title
              </div>
            </GridItem>
          </div>
        </Grid>
      </div>
    </Glow>
  </div>
</ListItem>
`;

exports[`<List.Item /> should render without a Glow when disabled 1`] = `
<ListItem
  className={null}
  image={null}
  isDisabled={true}
  isSelected={false}
  link={null}
  onClick={null}
  rightComponent={null}
  title="My Title"
>
  <Grid
    className="align-items-center min-height-56 p-8px_0 position-relative z-index-2"
    component="div"
    wrap={false}
  >
    <div
      className="align-items-center min-height-56 p-8px_0 position-relative z-index-2 d-flex min-width-100P"
    >
      <div
        className="align-self-flex-start flex-shrink-0 m-0_16px w-40"
      />
      <GridItem
        className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word c-ccc"
        component="div"
        grow={1}
        shrink={1}
      >
        <div
          className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word c-ccc flex-grow-1"
        >
          My Title
        </div>
      </GridItem>
    </div>
  </Grid>
</ListItem>
`;

exports[`<List.Item /> should render without a Glow when selected 1`] = `
<ListItem
  className={null}
  image={null}
  isDisabled={false}
  isSelected={true}
  link={null}
  onClick={null}
  rightComponent={null}
  title="My Title"
>
  <Grid
    className="align-items-center min-height-56 p-8px_0 position-relative z-index-2 b-eaeaea _3ply3f"
    component="div"
    wrap={false}
  >
    <div
      className="align-items-center min-height-56 p-8px_0 position-relative z-index-2 b-eaeaea _3ply3f d-flex min-width-100P"
    >
      <div
        className="align-self-flex-start flex-shrink-0 m-0_16px w-40"
      />
      <GridItem
        className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word"
        component="div"
        grow={1}
        shrink={1}
      >
        <div
          className="w-100P mt-2 pr-16 hyphens-auto _br4lpt word-break-break-word flex-grow-1"
        >
          My Title
        </div>
      </GridItem>
    </div>
  </Grid>
</ListItem>
`;
